Fixing sonarqube